# local-ai

./: LICENSE  pyproject.toml  requirements.txt  todo-list.txt
src/local_ai/: main.py
src/local_ai/bot/: __init__.py  core.py
src/local_ai/preprocessing/: __init__.py  tokenizer.py
src/tests/: test_tokenizer.py
